Java 19 is now supported on runtime, using CLI and ANT. Gzoltar can now generate reports for projects using Java 19