@@ -58,7 +58,7 @@
 
   <target name="compile" depends="install-deps">
     <mkdir dir="${build.classes.dir}" />
-    <javac source="1.6" target="1.6"
+    <javac source="19" target="19"
            srcdir="${src.dir}"
            destdir="${build.classes.dir}"
            debug="true"
@@ -68,7 +68,7 @@
     </javac>
 
     <mkdir dir="${build.test.classes.dir}" />
-    <javac source="1.6" target="1.6"
+    <javac source="19" target="19"
            srcdir="${tests.dir}"
            destdir="${build.test.classes.dir}">
       <classpath>
@@ -129,7 +129,6 @@
             <pathelement path="${gzoltar-agent-rt.jar}" />
             <pathelement path="${gzoltar-cli.jar}" />
         </classpath>
-        <jvmArg value="-XX:MaxPermSize=2048M" />
         <jvmArg value="-Dgzoltar-agent.destfile=${gzoltar.exec.file}" />
         <jvmArg value="-Dgzoltar-agent.output=file" />
         <arg value="runTestMethods" />
